[gd_scene load_steps=6 format=3 uid="uid://bhlu7uy66nv41"]

[ext_resource type="Texture2D" uid="uid://bnme0l7m8lof8" path="res://game/resources/img/menu/menu_background_2280x1080.png" id="1_gjyws"]
[ext_resource type="Script" path="res://game/scenes/menu/base_structure.gd" id="1_mu7k5"]
[ext_resource type="Texture2D" uid="uid://ds3sotkbkpcwh" path="res://game/resources/img/menu/menu_btn_left_2280x1080.png" id="2_n714l"]
[ext_resource type="Texture2D" uid="uid://dn72k62xfwmw0" path="res://game/resources/img/menu/menu_btn_center_2280x1080.png" id="3_v765o"]
[ext_resource type="Texture2D" uid="uid://dm8u1qk8wk7i" path="res://game/resources/img/menu/menu_bnt_right_2280x1080.png" id="4_k65nm"]

[node name="base_structure" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_mu7k5")

[node name="MenuBackground" type="TextureRect" parent="."]
z_index = 2
layout_mode = 0
offset_top = 1991.0
offset_right = 1081.0
offset_bottom = 2266.0
texture = ExtResource("1_gjyws")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 1080.0
offset_bottom = 2280.0
metadata/_edit_use_anchors_ = true

[node name="Add" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "I'm an add
"

[node name="GameZone" type="Control" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 30

[node name="Menu" type="HBoxContainer" parent="VBoxContainer"]
z_index = 2
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 30

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Menu"]
layout_mode = 2
theme_override_constants/margin_left = 50

[node name="Left" type="TextureButton" parent="VBoxContainer/Menu"]
layout_mode = 2
texture_normal = ExtResource("2_n714l")

[node name="Middle" type="TextureButton" parent="VBoxContainer/Menu"]
layout_mode = 2
texture_normal = ExtResource("3_v765o")

[node name="Right" type="TextureButton" parent="VBoxContainer/Menu"]
layout_mode = 2
texture_normal = ExtResource("4_k65nm")

[connection signal="pressed" from="VBoxContainer/Menu/Middle" to="." method="_on_shop_button_pressed"]
